# credit-default-pipeline

./: .env.example  .gitignore  LICENSE  README.md  alembic.ini  config.py  docker-compose.yml  pyproject.toml
.dvc/: config
.github/: pull_request_template.md
.github/workflows/: main.yml
analytics/: __init__.py
analytics/dbt_project/: .envrc.example  dbt_project.yml
analytics/dbt_project/macros/: generate_company_key.sql
analytics/dbt_project/snapshots/: companies_snapshot.sql  energy_contracts_snapshot.sql
analytics/ingestion/: __init__.py  extract.py  restore.py
data/: raw.dvc
database/: __init__.py  base.py  connection.py  credit-default-database.sql  models.py  types.py
database/migrations/: env.py
database/migrations/versions/: 4c84a2bf5287_feat_create_database_structure.py  7f2797ec0404_feat_create_database_structure.py  (+1 more)
docs/schema/: credit-default-DFM.sql  credit-default-star-schema.sql  database_structure.sql
ml/: __init__.py
ml/dataset/: __init__.py  loader.py  split.py
schemas/: __init__.py  base.py  models_validation.py  types.py
simulation/: __init__.py  profiles.py  seed.py
tests/: __init__.py  conftest.py  test_database.py  test_database_connection.py  test_database_models.py  test_extract.py  test_simulation.py  test_timezone_utils.py  test_validation_models.py
tests/analytics/: __init__.py
tests/database/: __init__.py  test_models.py
tests/ml/: __init__.py
tests/schemas/: __init__.py
tests/simulation/: __init__.py
tests/utils/: __init__.py
utils/: __init__.py  logging_utils.py  timezone_utils.py
(+25 files in other folders)
