[project]
name = "credit-default-pipeline"
version = "0.1.0"
description = "Pipeline end-to-end for risk's prediction of company insolvency."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.18.5",
    "dvc[gdrive]>=3.67.1",
    "logfire[sqlalchemy]>=4.37.0",
    "psycopg2-binary>=2.9.12",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.2",
    "pytest>=9.1.1",
    "pytest-cov>=7.1.0",
    "sqlalchemy>=2.0.51",
]

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "D"]
ignore = [
    "D203", # Disable the empty line before class (choosing D211)
    "D213"  # Disable summary on the second line (choosing D212)
]

[tool.ruff.format]
docstring-code-format = true
docstring-code-line-length = 72

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.coverage.run]
omit = [
    "**/__init__.py",
    "config.py",
]
